--- a/package.json
+++ b/package.json
@@ -19,8 +19,17 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "angularfire2": "^4.0.0-rc.1",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "firebase": "^4.2.0",
+    "ng2-validation": "^4.2.0",
+    "node-sass": "^4.10.0",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.0.5",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
